2002-08-08  Cristy  <cristy@mystic.es.dupont.com>
  * Added logging capabilities to the CORE API.  This facility is useful
    for debugging.
  * AcquireImagePixels() did not always return the same pixel values
    for virtual pixels when the cache was stored on disk (very rare).

2002-08-07  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick 5.4.9 released.

2002-09-06  Leonard Rosenthol <leonardr@lazerware.com>
  * Fixed some bugs in the Clipboard coder
  * Added new ImageToHBITMAP function to NTFeature.c/.h in core
  * Added support for Quantum==32 to IMDisplay

2002-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fix formatting in the *.mgk files so that they are XML conformant

2002-08-30  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * QuantizeImage() did not always produce proper bilevel images.

2002-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Apply prefix/suffix transformations to ImageMagick program names
    which are substituted into delegates.mgk.  This fix was requested
    by Glenn Randers-Pehrson.

2002-08-25  Cristy  <cristy@mystic.es.dupont.com>
  * Arcs are now rendered properly.
  * Use -authenticate to specifiy a password when viewing encrypted PDF's.
  * -page was previouly being ignored.
  * Configure files are returned as blobs now (suggested by William
    Radcliffe).

2002-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added --disable-installed option to configure to support building
    an ImageMagick which is not installed via hard-coded paths. This
    is intended to be used for the ad-hoc binary distributions built by
    ImageMagick Studio.
  * The UseInstalledImageMagick define is to be used by builds formally
    installed under a prefix, or via the Windows registry.
  * Replaced GetMagickConfigurePath() with the three functions
    FindConfigurationFile(), FindFontFile(), and FindModuleFile().
  * Re-implemented InitializeMagick() to try harder at finding the